# qa_tool

./: .gitignore  pyproject.toml  qa_tool_settings.toml  runs.db
.devcontainer/: devcontainer.json
artifacts/e6eebfab-ac5d-42ae-803d-787f48f550a4/: summary.json  timeseries.csv  timeseries.parquet  timeseries.pkl
qa_tool/: app.py  build_dummy_data.py  requirements.txt  settings.py  sqlite_store.py
