[project]
name = "qa_tool"
version = "0.1.0"
description = "Simple QA/regression web UI from database info."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ejb90" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/ejb90/qa_tool"
Repository = "https://github.com/ejb90/qa_tool"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5",
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "twine>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["qa_tool"]

[tool.ruff]
# Target modern Python
target-version = "py311"
line-length = 120
fix = true
show-fixes = true

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable a strict, opinionated rule set
select = [
    "F",     # Pyflakes (unused imports, undefined names)
    "E",     # Pycodestyle errors
    "W",     # Pycodestyle warnings
    "I",     # Import sorting (isort)
    "N",     # PEP8 naming
    "B",     # Bugbear
    "C4",    # Comprehension optimisations
    "UP",    # PyUpgrade
    "SIM",   # Code simplifications
    "ARG",   # Unused function arguments
    "DTZ",   # Datetime timezone issues
    "RUF",   # Ruff-specific rules
    "ANN",   # Type annotations
    "D",     # Docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Fully Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
markers = [
    "integration: executes external tools for end-to-end verification",
]
addopts = [
    "-ra",
    "-m",
    "not integration",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=qa_tool",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
